# hikvision_camera_ros2

./: CMakeLists.txt  README.md  package.xml
launch/: camera_with_rotate.launch.py  camera_with_rotate_sync.launch.py  image_rotate.launch.py  image_sync.launch.py
msg/: ImagePair.msg
src/: hikvision_camera_node.cpp  image_rotate_node.cpp  image_sync_node.cpp
src/hikvision_camera_ros2/: CMakeLists.txt  README.md  package.xml
src/hikvision_camera_ros2/config/: camera_params.yaml
src/hikvision_camera_ros2/launch/: hikvision_camera.launch.py
